--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,6 +8,30 @@
   .user-container {
     border: 2px solid yellow;
     padding: 10px;
-    margin: 10px
+    margin: 10px;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5vh;
+
+    input {
+      margin-bottom: 16px;
+      padding: 8px;
+    }
+
+    button {
+      background-color: #4caf50;
+      border: none;
+      color: white;
+      padding: 8px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin-top: 16px;
+      cursor: pointer;
+    }
   }
 }
